tests/fixtures/compile_errors/circular_dependency_create2.fe
contract Foo:
    pub def bar() -> address:
        foo: Foo = Foo.create2(2, 0)

        return address(foo)